brain/sources/prod-metadata/objects/Onboarding__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Welcome Call</fullName>
            </value>
            <value>
                <fullName>Service Agreement</fullName>
            </value>
            <value>
                <fullName>Resume Creation</fullName>
            </value>
            <value>
                <fullName>Onboarding Completed</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>