brain/sources/prod-metadata/objects/Onboarding__c/fields/Technology_For_Resume__c.field-meta.xml
<CustomField>
    <fullName>Technology_For_Resume__c</fullName>
    <label>Technology For Resume</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>