brain/sources/prod-metadata/objects/Onboarding__c/fields/Total_Years_of_Experience__c.field-meta.xml
<CustomField>
    <fullName>Total_Years_of_Experience__c</fullName>
    <label>Total Years of Experience</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>