brain/sources/prod-metadata/objects/Onboarding__c/fields/Types_of_degree__c.field-meta.xml
<CustomField>
    <fullName>Types_of_degree__c</fullName>
    <label>Types of degree</label>
    <length>255</length>
    <type>Text</type>
</CustomField>