brain/sources/prod-metadata/objects/Onboarding__c/fields/Upfront_Amount__c.field-meta.xml
<CustomField>
    <fullName>Upfront_Amount__c</fullName>
    <label>Upfront Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>