brain/sources/prod-metadata/objects/Onboarding__c/fields/Visa_Status__c.field-meta.xml
<CustomField>
    <fullName>Visa_Status__c</fullName>
    <label>Visa Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>F1</fullName>
            </value>
            <value>
                <fullName>H1-B</fullName>
            </value>
            <value>
                <fullName>CPT</fullName>
            </value>
            <value>
                <fullName>OPT-EAD</fullName>
            </value>
            <value>
                <fullName>H4-EAD</fullName>
            </value>
            <value>
                <fullName>Green_Card</fullName>
                <label>Green Card</label>
            </value>
            <value>
                <fullName>US_Citizen</fullName>
                <label>US Citizen</label>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>