brain/sources/prod-metadata/objects/Onboarding__c/fields/Welcome_Script__c.field-meta.xml
<CustomField>
    <fullName>Welcome_Script__c</fullName>
    <label>Welcome Script</label>
    <type>TextArea</type>
</CustomField>