brain/sources/prod-metadata/objects/Onboarding__c/fields/WhatsApp_Number__c.field-meta.xml
<CustomField>
    <fullName>WhatsApp_Number__c</fullName>
    <label>WhatsApp Number</label>
    <type>Phone</type>
</CustomField>