brain/sources/prod-metadata/objects/Onboarding__c/fields/When_did_you_move_to_USA__c.field-meta.xml
<CustomField>
    <fullName>When_did_you_move_to_USA__c</fullName>
    <label>When did you move to USA</label>
    <length>255</length>
    <type>Text</type>
</CustomField>