brain/sources/prod-metadata/objects/Onboarding__c/fields/Which_Experience_Level__c.field-meta.xml
<CustomField>
    <fullName>Which_Experience_Level__c</fullName>
    <label>Which Experience Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Entry_Level</fullName>
                <label>Entry Level</label>
            </value>
            <value>
                <fullName>Associate</fullName>
            </value>
            <value>
                <fullName>Mid-Senior_level</fullName>
                <label>Mid-Senior level</label>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Executive</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>