brain/sources/prod-metadata/objects/Onboarding__c/fields/Work_Experiene__c.field-meta.xml
<CustomField>
    <fullName>Work_Experiene__c</fullName>
    <label>Work Experience</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>