brain/sources/prod-metadata/objects/Onboarding__c/validationRules/ATS_Score_below_75.validationRule-meta.xml
<ValidationRule>
    <fullName>ATS_Score_below_75</fullName>
    <active>false</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Status__c,&apos;Onboarding Completed&apos;) ,
OR(ATS_Score__c &lt; 75, ISNULL(ATS_Score__c))
)</errorConditionFormula>
    <errorMessage>ATS Score needs to be at least 75</errorMessage>
</ValidationRule>