brain/sources/prod-metadata/objects/Onboarding__c/validationRules/Candidate_Approval_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Candidate_Approval_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Status__c  , &apos;Onboarding Completed&apos;) ,
NOT(  Candidate_Approval__c )
)</errorConditionFormula>
    <errorDisplayField>Candidate_Approval__c</errorDisplayField>
    <errorMessage>Get the candidate approval of the resume before completion of the onboarding</errorMessage>
</ValidationRule>