brain/sources/prod-metadata/objects/Onboarding__c/validationRules/Onboarding_Completion_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Onboarding_Completion_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
    ISPICKVAL(Status__c, &quot;Onboarding Completed&quot;),
    ISCHANGED(Status__c),
NOT(ISCHANGED(Flow_Only_Field__c))
)</errorConditionFormula>
    <errorMessage>The &apos;Status&apos; field cannot be set to &apos;Onboard Completion&apos; directly. Please use Complete Onboarding button.</errorMessage>
</ValidationRule>