brain/sources/prod-metadata/objects/Onboarding__c/validationRules/Service_Agreement_Required_Before_Resume.validationRule-meta.xml
<ValidationRule>
    <fullName>Service_Agreement_Required_Before_Resume</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Status__c  , &apos;Resume Creation&apos;) ,
NOT( Service_Agreement_Signed__c )
)</errorConditionFormula>
    <errorMessage>Get the Service Agreement signed before starting on the Resume.</errorMessage>
</ValidationRule>