brain/sources/prod-metadata/objects/Onboarding__c/validationRules/Work_Authorization_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Work_Authorization_Required</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
 ISPICKVAL(Status__c  , &apos;Onboarding Completed&apos;) ,
ISNULL(  Text(Work_Authorization__c) )
)</errorConditionFormula>
    <errorDisplayField>Work_Authorization__c</errorDisplayField>
    <errorMessage>Get the candidate approval of the resume before completion of the onboarding</errorMessage>
</ValidationRule>